# service_template

./: .gitignore  README.md  cookiecutter.json
{{ cookiecutter.pkg_name }}/: .dockerignore  .pre-commit-config.yaml  Dockerfile  README.md  api_service.Dockerfile  gunicorn.conf.py  pull_request_template.md  pyproject.toml
{{ cookiecutter.pkg_name }}/tests/: conftest.py
{{ cookiecutter.pkg_name }}/tests/mocks/: mock_cloud_storage_connection.py  mock_firebase_connection.py  mock_mysql_connection.py
{{ cookiecutter.pkg_name }}/{{ cookiecutter.pkg_name }}/: __init__.py  container.py  main.py
{{ cookiecutter.pkg_name }}/{{ cookiecutter.pkg_name }}/adapters/api/: __init__.py  container.py  main.py  versions.py  welcome_rest.py
{{ cookiecutter.pkg_name }}/{{ cookiecutter.pkg_name }}/adapters/api/containers/: __init__.py  infrastructure_container.py  main_container.py  repository_container.py  use_case_container.py
{{ cookiecutter.pkg_name }}/{{ cookiecutter.pkg_name }}/adapters/api/middlewares/: __init__.py  exception_handler.py
{{ cookiecutter.pkg_name }}/{{ cookiecutter.pkg_name }}/adapters/api/routes/: __init__.py  versions.py  welcome_rest.py
{{ cookiecutter.pkg_name }}/{{ cookiecutter.pkg_name }}/adapters/api/routes/v1/: __init__.py  (+1 more)
{{ cookiecutter.pkg_name }}/{{ cookiecutter.pkg_name }}/adapters/api/v1/: __init__.py
{{ cookiecutter.pkg_name }}/{{ cookiecutter.pkg_name }}/adapters/api/validators/: __init__.py  welcome.py
{{ cookiecutter.pkg_name }}/{{ cookiecutter.pkg_name }}/adapters/middlewares/: __init__.py
{{ cookiecutter.pkg_name }}/{{ cookiecutter.pkg_name }}/adapters/validators/: __init__.py
{{ cookiecutter.pkg_name }}/{{ cookiecutter.pkg_name }}/config/: __init__.py  settings.py
{{ cookiecutter.pkg_name }}/{{ cookiecutter.pkg_name }}/domain/entities/: __init__.py
{{ cookiecutter.pkg_name }}/{{ cookiecutter.pkg_name }}/domain/exceptions/: __init__.py  utils.py  {{ cookiecutter.pkg_name }}_error.py
{{ cookiecutter.pkg_name }}/{{ cookiecutter.pkg_name }}/domain/interfaces/: __init__.py  database_connection.py
{{ cookiecutter.pkg_name }}/{{ cookiecutter.pkg_name }}/infrastructure/: __init__.py
{{ cookiecutter.pkg_name }}/{{ cookiecutter.pkg_name }}/infrastructure/connections/: __init__.py  firebase.py  firebase_cloud_storage.py  firebase_cloud_storage_config.py  firebase_config.py  google_cloud_sql.py  google_cloud_sql_config.py  google_pub_sub.py  google_pubsub_config.py
{{ cookiecutter.pkg_name }}/{{ cookiecutter.pkg_name }}/infrastructure/external_services/: __init__.py  job_queue.py  llm_factory.py
{{ cookiecutter.pkg_name }}/{{ cookiecutter.pkg_name }}/infrastructure/repositories/: __init__.py
{{ cookiecutter.pkg_name }}/{{ cookiecutter.pkg_name }}/settings/: __init__.py  ai_settings.py  cloud_settings.py  database_settings.py  logger_settings.py  project_settings.py  security_settings.py
{{ cookiecutter.pkg_name }}/{{ cookiecutter.pkg_name }}/use_cases/: __init__.py
(+8 files in other folders)
